[metadata]
name = nagare-commands-proxy
author = Net-ng
author_email = alain.poirier@net-ng.com
description = 'nagare-admin proxy' commands for HTTP reverse proxy dispatch rules generation'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/commands-proxy
    Tracker = https://github.com/nagareproject/commands-proxy/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services-statics
    nagare-server-http

[options.entry_points]
nagare.commands =
    proxy = nagare.admin.proxy:Commands

nagare.commands.proxy =
    nginx = nagare.admin.nginx_proxy:Proxy
    apache = nagare.admin.apache_proxy:Proxy

nagare.services =
    http_proxy = nagare.admin.proxy:HTTPProxyService

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
